# gsfit

./: .gitignore  LICENSE  README.md  pyproject.toml
.github/: copilot-instructions.md
.github/workflows/: CI.yml
documentation/: d2_psi_d_z2_equation.md  gsfit_coding_standards.md
examples/: d2_psi_d_z2_investigation.ipynb  example_01__st40__experimental_data__magnetics_only.py  example_01_st40_with_experimental_data.py  example_02__mastu__freegsnke_data.ipynb  example_02_mastu_with_synthetic_data_from_freegsnke.ipynb  example_03__st40__astra_data.ipynb  example_03_st40_with_synthetic_data_from_astra.ipynb  example_04_st40_with_synthetic_data_from_freegs.ipynb  example_05_st40_setup_for_rtgsfit.py  example_06_st40_running_gsfit_like_rtgsfit.py  example_07_tensioned_cubic_b_spline_test.ipynb  example_08__st40__experimental_data__vacuum_circuit_equations.ipynb  example_08_circuit_equations_with_vacuum_shot.ipynb  example_09__st40__freegs_data__pedestal__pressure_constrained.ipynb  example_09_st40__freegs_synthetic_data__pedestal__pressure_constrained.ipynb  example_10__st40__real_data__pressure_constrained.ipynb  example_11__st40__freegs_data__up_down_symmetric.ipynb  example_12__st40__dialoop_example.py  psi_self_field_ground_truth.ipynb  psi_self_term_investigation.ipynb  psi_self_term_investigation_for_paper.ipynb  run_gsfit__st40__real_data__pressure_constrained copy.py  scan_gsfit__st40__real_data_pressure_constrained.py
python/diagnostic_and_simulation_base/: README.md  __init__.py  diagnostic_and_simulation_base.py  nested_dictionary.py  version_storage.py
python/gsfit/: __init__.py  gsfit.py
python/gsfit_rs/: __init__.py  gsfit_rs.pyi  (+2 more)
rust/: Cargo.toml  build.rs
rust/data_tree/: Cargo.toml
rust/data_tree/data_tree_derive/: Cargo.toml  README.md
rust/data_tree/data_tree_derive/src/: lib.rs
rust/data_tree/src/: lib.rs
rust/data_tree_derive/: README.md
rust/data_tree_derive/src/: lib.rs
rust/gsfit_rs/: Cargo.toml  build.rs
rust/gsfit_rs/src/: bicubic_interpolator.rs  coils.rs  lib.rs  npy_reader.rs  passives.rs  plasma.rs  python_pickling_methods.rs
rust/gsfit_rs/src/circuit_equations/: mod.rs  solver.rs  test_rk4.rs
rust/gsfit_rs/src/grad_shafranov/: epp_chi_sq_mag.rs  grad_shafranov_solver.rs  gs_solution.rs  mod.rs
rust/gsfit_rs/src/greens/: d2_psi_d_r2_calculator.rs  filament_geometry.rs  greens.rs  greens_OLD.rs  greens_b.rs  greens_d2_psi_d_r2.rs  greens_d_b_d_z.rs  greens_psi.rs  greens_psi_py.rs  greens_python_interface.rs  mod.rs  mutual_inductance_finite_size_to_finite_size.rs  mutual_inductance_finite_size_to_point.rs
rust/gsfit_rs/src/material_properties/: copper_resistivity.rs  mod.rs
rust/gsfit_rs/src/plasma_geometry/: bicubic_interpolator.rs  boundary_contour.rs  calculate_winding_number.rs  cubic_interpolation.rs  find_boundary.rs  find_magnetic_axis.rs  find_stationary_points.rs  find_stationary_points_using_contour.rs  find_stationary_points_using_full_quadrant_method.rs  find_stationary_points_using_sign_differences.rs  find_stationary_points_using_winding_number.rs  find_viable_limit_point.rs  find_viable_xpt.rs  flood_fill_mask.rs  hessian.rs  marching_squares.rs  marching_squares_for_sol.rs  mod.rs
rust/gsfit_rs/src/sensors/: bp_probes.rs  dialoop.rs  flux_loops.rs  hall_probes.rs  isoflux.rs  isoflux_boundary.rs  magnetic_axis.rs  mod.rs  pressure.rs  rogowski_coils.rs  static_and_dynamic_data_types.rs  stationary_point.rs
rust/gsfit_rs/src/source_functions/: efit_polynomial.rs  liuqe_polynomial.rs  mod.rs  source_function_generics.rs  tensioned_cubic_b_spline.rs
rust/gsfit_rs/test_assets/plasma_geometry/find_stationary_points_using_winding_number/: test_1_find_stationary_points_using_winding_number_with_contour_entering_and_exiting_same_cell_edge.ipynb  test_2_find_stationary_points_using_winding_number_with_stationary_point_at_cell_edge.ipynb
rust/gsfit_rs/test_assets/plasma_geometry/find_stationary_points_using_winding_number/mast_u_iter_0/: d2_psi_d_r2_2d.npy  d2_psi_d_rz_2d.npy  d2_psi_d_z2_2d.npy  d_psi_d_r_2d.npy  d_psi_d_z_2d.npy  psi_2d.npy  r.npy  z.npy
rust/gsfit_rs/test_assets/plasma_geometry/flood_fill_mask/: flood_fill_mask_analytic_equation.ipynb  mask_2d.npy  psi_2d.npy  vessel_r.npy  vessel_z.npy
rust/gsfit_rs/test_assets/plasma_geometry/hessian/: test_hessian_for_maximum.ipynb
rust/gsfit_rs/test_data/flood_fill_mask/: flood_fill_mask.ipynb  mask_2d.txt  psi2d.txt  vessel_r.txt  vessel_z.txt
rust/gsfit_rs/test_data/plasma_geometry/find_stationary_points/: test_find_stationary_points.ipynb
rust/gsfit_rs/test_data/plasma_geometry/find_stationary_points_using_winding_number/: test_1_find_stationary_points_using_winding_number_with_contour_entering_and_exiting_same_cell_edge.ipynb  test_2_find_stationary_points_using_winding_number_with_stationary_point_at_cell_edge.ipynb
rust/gsfit_rs/test_data/plasma_geometry/flood_fill_mask/: flood_fill_mask.ipynb  flood_fill_mask_analytic_equation.ipynb
rust/interpolation/: Cargo.toml
rust/interpolation/src/: errors.rs  lib.rs
rust/interpolation/src/dim_1/: linear.rs  mod.rs
rust/npy_reader_and_writer/: Cargo.toml
rust/npy_reader_and_writer/src/: header.rs  lib.rs  reader.rs  writer.rs
rust/src/: bicubic_interpolator.rs  coils.rs  lib.rs  nested_dict.rs  passives.rs  plasma.rs
rust/src/circuit_equations/: solver_example.rs
rust/src/grad_shafranov/: gs_solution.rs
rust/src/greens/: d2_psi_d_r2_calculator.rs  d_greens_magnetic_field_dz.rs  greens.rs  greens_b.rs  greens_d2_psi_d_r2.rs  greens_d_b_d_z.rs  greens_magnetic_field.rs  greens_psi.rs  mod.rs  mutual_inductance_finite_size_to_finite_size.rs
rust/src/plasma_geometry/: boundary_contour.rs  find_boundary.rs  find_magnetic_axis.rs  find_stationary_points.rs  find_viable_limit_point.rs  find_viable_xpt.rs  hessian.rs  mod.rs
rust/src/sensors/: bp_probes.rs  dialoop.rs  flux_loops.rs  isoflux.rs  isoflux_boundary.rs  pressure.rs  rogowski_coils.rs
rust/src/source_functions/: efit_polynomial.rs  liuqe_polynomial.rs
tests/: conftest.py  test_01_test_run.py  test_wrapper.py
(+140 files in other folders)
