[workspace]
members = [
    "data_tree",
    "data_tree/data_tree_derive",
    "gsfit_rs",
]
resolver = "2"

# Workspace-wide profile settings
[profile.release]
debug = false
overflow-checks = true
opt-level = 3  # Highest optimization level
lto = true  # Link Time Optimization
codegen-units = 1  # Fewer units can lead to better optimization

[profile.dev]
debug = true
overflow-checks = true