[workspace]
members = [
    "data_tree",
    "data_tree/data_tree_derive",
    "gsfit_rs",
    "interpolation"
    # "solovev_with_vacuum"
]
resolver = "3"  # Use Rust 2024 edition resolver
[workspace.package]
edition = "2024"

# Workspace-wide profile settings (note, this overwrites the "member packages")
[profile.release]
debug = false
overflow-checks = true
opt-level = 3  # Highest optimization level
lto = true  # Link Time Optimization
codegen-units = 1  # Fewer units can lead to better optimization

[profile.dev]
debug = true
overflow-checks = true