[package]
name = "gsfit_rs"
version = "0.0.5"
edition = "2024"

[lib]
crate-type = ["cdylib", "rlib"]
name = "gsfit_rs"

[features]
vendored-openssl = ["dep:openssl-sys"]

[build-dependencies]
# OpenSSL (optional; only activated with `vendored-openssl` feature to compile a
# compatible OpenSSL from source for the manylinux CI build, where the system
# OpenSSL may be too new for `openssl-sys`). This must be a build-dependency
# (not a regular dependency) so that Cargo's resolver v3 unifies its `vendored`
# feature with the transitive `openssl-sys` in the host dependency graph
# (openblas-build -> ureq -> native-tls -> openssl-sys).
openssl-sys = { version = "0.9.116", features = ["vendored"], optional = true }

[dependencies]
# Local data_tree dependency
data_tree = { path = "../data_tree" }
interpolation = { path = "../interpolation" }
npy_reader_and_writer = { path = "../npy_reader_and_writer" }

# External dependencies
contour = "0.13.1"
diffsol = "0.14.0"
geo = "0.33.1"  # For centre of mass; polygon area
geo-types = "0.7.19"  # For getting geo type out of `contour`
pyo3 = { version = "0.28.3", features = ["extension-module", "multiple-pymethods"] }  # "extension-module" = this will be a Python package; "multiple-pymethods" = ??
physical_constants = "0.5.0"  # For MU_0
rayon = "1.12.0"
spec_math = "0.1.6"  # For elliptic integrals
numpy = "0.28.0"
ndarray = { version = "0.17.2", features = ["approx"] }  # must be same version as numpy uses internally
ndarray-interp = "0.6.0"  # TODO: I want to remove this dependency, because it has essentially been abandoned and it restricts `ndarray` version!
env_logger = "0.11.10"
log = "0.4.29"
approx = "0.5.1"
faer = "0.24.0"
lapack = "0.20.0"
ndarray-stats = "0.7.0"  # TODO: I want to remove this dependency, because it restricts `ndarray` version!
rand = "0.10.1"
special = "0.13.1" # "special" mathematical functions, used for `Lambert`

# Platform-specific BLAS/LAPACK configurations
[target.'cfg(not(target_os = "windows"))'.dependencies]
blas-src = { version = "0.14.0", features = ["openblas"] }
ndarray-linalg = { version = "0.18.1", features = ["openblas"] }

[target.'cfg(target_os = "windows")'.dependencies]
openblas-src = { version = "0.10.16", features = ["system"] }
ndarray-linalg = { version = "0.18.1", features = ["openblas-static"] }

[lints.clippy]
needless_range_loop = "allow"
needless_return = "allow"
