[package]
name = "gsfit_rs"
version = "0.0.5"
edition = "2024"

[lib]
crate-type = ["cdylib", "rlib"]
name = "gsfit_rs"

[dependencies]
# Local dependency
data_tree = { path = "../data_tree" }
interpolation = { path = "../interpolation" }
npy_reader_and_writer = { path = "../npy_reader_and_writer" }

# External dependencies
contour = "0.13.1"
diffsol = "0.16.1"
geo = "0.33.1"  # For centre of mass; polygon area
geo-types = "0.7.19"  # For getting geo type out of `contour`
pyo3 = { version = "0.29.0", features = ["extension-module", "multiple-pymethods"] }  # "extension-module" = this will be a Python package; "multiple-pymethods" = allow more than one `#[pymethods]` impl block per `#[pyclass]` struct, needed because the `#[derive(AddDataTreeGetters)]` macro generates a second block
physical_constants = "0.5.0"  # For MU_0
rayon = "1.12.0"
spec_math = "0.1.6"  # For elliptic integrals
numpy = "0.29.0"
ndarray = { version = "0.17.2", features = ["approx"] }  # must be same version as numpy uses internally
ndarray-interp = "0.6.0"  # TODO: I want to remove this dependency, because it has essentially been abandoned and it restricts `ndarray` version!
env_logger = "0.11.11"
log = "0.4.33"
approx = "0.5.1"
faer = "0.24.4"
ndarray-stats = "0.7.0"  # TODO: I want to remove this dependency, because it restricts `ndarray` version!
rand = "0.10.2"
special = "0.13.1" # "special" mathematical functions, used for `Lambert`

[build-dependencies]
# Used in `build.rs` to discover the Python interpreter (uv, venv, conda, or system Python)
# with the same logic pyo3 itself uses; must be the same version as `pyo3`
pyo3-build-config = { version = "0.29.0", features = ["resolve-config"] }

[lints.clippy]
needless_range_loop = "allow"
needless_return = "allow"
